# zero2prod

./: .gitignore
.github/workflows/: general.yml
rust/: Cargo.toml  configuration.yaml
rust/scripts/: init_db.sh
rust/src/: configuration.rs  lib.rs  main.rs  startup.rs
rust/src/routes/: subscriptions.rs
rust/test/: health_check.rs
rust/tests/: health_check.rs
